@@ -1,3 +1,10 @@
+Development Portal (2021-08-07 shi)
+==============================
+Update reference column for participating-org in SAVi
+Update hover titles for participating-org reference, crs and activity-id
+Update hover titles for transaction provider/receiver activity-id
+
+
 Development Portal (2021-08-02 shi)
 ==============================
 Update activity list column names to Total Commitment
